# pystreamflow-AI

./: .env.example  .gitignore  LICENSE  README.md  auth.py  database.py  pyproject.toml  pystreamflow.py  requirements.txt  run.bat  run.sh  style.css  test_app.py
.github/workflows/: ci.yml
static/: manifest.json  service-worker.js
